# PrimoStoryBot

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env_example  main.py  pyproject.toml  requirements.txt
BotCode/: __init__.py  config.py
BotCode/core/: storage.py
BotCode/handlers/: __init__.py  callback.py  inline.py
BotCode/handlers/commands/: __init__.py  start_cmd.py
BotCode/handlers/post/: __init__.py  create_posts.py  post_list.py
BotCode/loggers/: logs.py
BotCode/utils/: __init__.py  md2_escape.py  pagination.py  usernames.py
bot/: __init__.py  bots.py
bot/core/: storage.py
bot/handlers/: __init__.py  callback.py  inline.py
bot/handlers/commands/: __init__.py  help.py  start.py
bot/handlers/post/: __init__.py  create_posts.py  post_list.py
bot/keyboards/: __init__.py
bot/keyboards/inline/: __init__.py  decision.py
bot/keyboards/reply/: __init__.py
bot/loggers/: logs.py
bot/templates/: __init__.py  message_callback.py
bot/utils/: __init__.py  interesting_facts.py  md2_escape.py  pagination.py  usernames.py
configs/: __init__.py  cmd_list.py  config.py
middleware/loggers/: logs.py
posts/: posts_6751720805.json
